--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "A personal finance analysis tool for the command line",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "budget": "./node_modules/.bin/babel-node main.js --budget",
+    "create": "./node_modules/.bin/babel-node main.js --create"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
     "cli-table": "^0.3.1",
     "csvtojson": "^0.4.3",
     "lodash": "^3.10.1",
