--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.5.0",
     "cli-table": "^0.3.1",
     "csvtojson": "^0.4.3",
+    "express": "^4.13.4",
     "lodash": "^3.10.1",
     "yargs": "^3.25.0"
   }
