--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "budget": "./node_modules/.bin/babel-node main.js --budget",
-    "create": "./node_modules/.bin/babel-node main.js --create"
+    "create": "./node_modules/.bin/babel-node main.js --create",
+    "server": "./node_modules/.bin/babel-node server.js"
   },
   "author": "",
   "license": "ISC",
