--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
+    "bootstrap": "^3.3.6",
     "cli-table": "^0.3.1",
     "csvtojson": "^0.4.3",
     "express": "^4.13.4",
