--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
-    "bootstrap": "^3.3.6",
     "cli-table": "^0.3.1",
     "csvtojson": "^0.4.3",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "lodash": "^3.10.1",
     "yargs": "^3.25.0"
