--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "A personal finance analysis tool for the command line",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "budget": "./node_modules/.bin/babel-node main.js --budget",
-    "create": "./node_modules/.bin/babel-node main.js --create",
-    "server": "./node_modules/.bin/babel-node server.js"
+    "test": "jasmine './src/**/*.test.js'",
+    "test:specs": "chokidar -p './src/**/*.test.js' -c 'npm run test'",
+    "budget": "./node_modules/.bin/babel-node ./src/main.js --budget",
+    "create": "./node_modules/.bin/babel-node ./src/main.js --create",
+    "start": "./node_modules/.bin/babel-node ./src/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/charlesponti/budgeteer.git"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +27,63 @@
     "jquery": "^2.2.1",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "yargs": "^3.25.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.0.2",
+    "chai": "^3.5.0",
+    "chokidar": "^1.7.0",
+    "chokidar-cli": "^1.2.0",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
+    "enzyme": "^2.9.1",
+    "eslint": "^4.4.1",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-node": "^4.2.3",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "ignore-styles": "^5.0.1",
+    "jasmine": "^2.7.0",
+    "jsdom": "^11.1.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "postcss": "^6.0.8",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-reporter": "^5.0.0",
+    "postcss-url": "^7.1.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-hot-loader": "^1.3.1",
+    "sinon": "^3.2.0",
+    "snazzy": "^6.0.0",
+    "standard": "^8.6.0",
+    "style-loader": "^0.18.2",
+    "sugarss": "^1.0.0",
+    "supertest": "^3.0.0",
+    "tap": "^10.7.2",
+    "webpack": "^3.5.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "standard"
+    ]
   }
 }
