--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "csvtojson": "^0.4.3",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.6",
     "jquery": "^2.2.1",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "winston": "^2.4.0",
     "yargs": "^3.25.0"
   },
   "devDependencies": {
@@ -45,7 +48,7 @@
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "enzyme": "^2.9.1",
-    "eslint": "^4.4.1",
+    "eslint": "^4.8.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^2.0.0",
     "eslint-config-standard": "^10.2.1",
@@ -79,14 +82,5 @@
     "supertest": "^3.0.0",
     "tap": "^10.7.2",
     "webpack": "^3.5.2"
-  },
-  "eslintConfig": {
-    "env": {
-      "jasmine": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "standard"
-    ]
   }
 }
