--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.13.4",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.6",
+    "graphql-tools": "^2.0.0",
     "jquery": "^2.2.1",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
