--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:specs": "chokidar -p './src/**/*.js' -c 'npm run test'",
     "budget": "./node_modules/.bin/babel-node ./src/main.js --budget",
     "create": "./node_modules/.bin/babel-node ./src/main.js --create",
-    "start": "./node_modules/.bin/babel-node ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "bootstrap": "^3.3.6",
     "cli-table": "^0.3.1",
     "csvtojson": "^0.4.3",
+    "dotenv": "^4.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-graphql": "^0.6.11",
@@ -32,6 +33,7 @@
     "numeral": "^1.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "validator": "^9.0.0",
     "winston": "^2.4.0",
     "yargs": "^3.25.0"
   },
