--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:specs": "chokidar -p './src/**/*.js' -c 'npm run test'",
     "budget": "./node_modules/.bin/babel-node ./src/main.js --budget",
     "create": "./node_modules/.bin/babel-node ./src/main.js --create",
-    "start": "node ./src/server.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -31,8 +32,10 @@
     "jquery": "^2.2.1",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
+    "pg": "^7.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sequelize": "^4.13.8",
     "validator": "^9.0.0",
     "winston": "^2.4.0",
     "yargs": "^3.25.0"
@@ -63,11 +66,12 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "faker": "^4.1.0",
     "ignore-styles": "^5.0.1",
     "jasmine": "^2.7.0",
     "jsdom": "^11.1.0",
     "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.1",
     "postcss": "^6.0.8",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.0.2",
