--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.6",
     "graphql-tools": "^2.0.0",
-    "jquery": "^2.2.1",
+    "jquery": ">3.0.0",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
     "pg": "^7.3.0",
