--- a/package.json
+++ b/package.json
@@ -18,13 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
-    "bootstrap": "^3.3.6",
-    "cli-table": "^0.3.1",
-    "csvtojson": "^0.4.3",
-    "dotenv": "^4.0.0",
-    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.6",
@@ -32,62 +25,16 @@
     "jquery": ">3.0.0",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
-    "pg": "^7.3.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "sequelize": "^4.13.8",
     "validator": "^9.0.0",
     "winston": "^2.4.0",
     "yargs": "^3.25.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.0.2",
-    "chai": "^3.5.0",
-    "chokidar": "^1.7.0",
-    "chokidar-cli": "^1.2.0",
-    "css-loader": "^0.28.4",
-    "cssnano": "^3.10.0",
-    "enzyme": "^2.9.1",
-    "eslint": "^4.8.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^2.0.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-node": "^4.2.3",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "@types/node": "^9.6.5",
     "faker": "^4.1.0",
-    "ignore-styles": "^5.0.1",
-    "jasmine": "^2.7.0",
-    "jsdom": "^11.1.0",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.12.1",
-    "postcss": "^6.0.8",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.1.1",
-    "react-addons-test-utils": "^15.6.0",
-    "react-hot-loader": "^1.3.1",
-    "sinon": "^3.2.0",
-    "snazzy": "^6.0.0",
-    "standard": "^8.6.0",
-    "style-loader": "^0.18.2",
-    "sugarss": "^1.0.0",
-    "supertest": "^3.0.0",
-    "tap": "^10.7.2",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1",
     "webpack": "^3.5.2"
   }
 }
