--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.13.4",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.6",
@@ -25,16 +26,17 @@
     "jquery": ">3.0.0",
     "lodash": "^3.10.1",
     "numeral": "^1.5.3",
+    "sequelize": "^4.38.0",
     "validator": "^9.0.0",
     "winston": "^2.4.0",
     "yargs": "^3.25.0"
   },
   "devDependencies": {
-    "@types/node": "^9.6.5",
+    "@types/node": "^9.6.23",
     "faker": "^4.1.0",
     "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
     "webpack": "^3.5.2"
   }
 }
