Return app to working state
* Remove unused files & dependencies
* Fix table in README
* Add yarn.lock
* Remove Dockerfile
* Remove files which i forgot their purpose
* ignore all `.sqlite` files
* Add missing `csvtojson`, `sqllite3`, `ejs` dependencies
* Add DB_STORAGE for sqlite3
* Use csvtojson/v1 as v2 is incompatible with current code
* Use NPM scripts instead of .sh for db setup
* Convert account number to Number()
* Fix `cli` functionality
* Move to `cli` directory
* Fix related NPM scripts
* Use `babel-preset-env` instead of `es2015`
* move `budget.js` & `flex.js` to `common` directory
* Remove `server/index.js`
* Fix ESLint
* Add Prettier
* Fix paths in NPM scripts
* Get tests working
* FIx ESLint settings
* Use JSDelivr for vendor files
* Add missing fields to Sequelize Transaction model
* Add missing `Processed` field to convertToTransactionType
* Run Prettier on files
* Use POST `/graphiql` on client
* Convert transaction keys to lowercase letters
* Add ability to return all `accounts` within need for `name` query
* Add ability to return `transaction.name` in `transactions` query
* Set foreigKey for `Accounts` & `Transactions`
* Run `fixpack` on package.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-*.csv
-.idea
-node_modules
 .DS_Store
+.idea/
+.sonarlint/
+.vscode/
+
+node_modules
+
+# application-specific
 secrets/
+*.csv
+*.sqlite
