--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "command-line-budgeter",
-  "version": "1.0.0",
+  "name": "budgeteer",
   "description": "A personal finance analysis tool for the command line",
-  "main": "main.js",
-  "scripts": {
-    "test": "jasmine './src/**/*.test.js'",
-    "test:specs": "chokidar -p './src/**/*.js' -c 'npm run test'",
-    "budget": "./node_modules/.bin/babel-node ./src/main.js --budget",
-    "create": "./node_modules/.bin/babel-node ./src/main.js --create",
-    "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/charlesponti/budgeteer.git"
-  },
-  "author": "",
-  "license": "ISC",
+  "version": "1.0.0",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "cli-table": "^0.3.1",
+    "csvtojson": "^2.0.8",
     "dotenv": "^6.0.0",
+    "ejs": "^2.6.1",
     "express": "^4.13.4",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.6",
@@ -27,16 +17,35 @@
     "lodash": "^4.17.5",
     "numeral": "^1.5.3",
     "sequelize": "^4.38.0",
-    "validator": "^9.0.0",
+    "sqlite3": "^4.0.2",
     "winston": "^2.4.0",
     "yargs": "^3.25.0"
   },
   "devDependencies": {
-    "@types/node": "^9.6.23",
-    "faker": "^4.1.0",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^2.9.2",
-    "webpack": "^3.5.2"
+    "chai": "^4.1.2",
+    "eslint": "^5.3.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "husky": "^0.14.3",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.3",
+    "prettier": "^1.14.2",
+    "pretty-quick": "^1.6.0",
+    "supertest": "^3.1.0"
+  },
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/charlesponti/budgeteer.git"
+  },
+  "scripts": {
+    "budget": "$(npm bin)/babel-node ./cli/main.js --budget",
+    "budget:create": "$(npm bin)/babel-node ./cli/main.js --create",
+    "db:seed": "node ./server/data/seed.js",
+    "db:setup": "npm run db:sync && npm run db:seed",
+    "db:sync": "node ./server/data/sync.js",
+    "start": "node ./server/server.js",
+    "start:dev": "$(npm bin)/nodemon ./server/server.js",
+    "test": "mocha './server/**/*.test.js'",
+    "test:watch": "npm run test -- --watch"
   }
 }
