Add Dockerfile for client
* Update gitignore
* Add oclif
* Update yarn.lock
* move server dependencies to server package.json
* move server src files to `src` directory
* update `amex-convert` example
* Move client to server directory
* Include account for all transaction queries
* use process.exit() in `data/sync.js`
* Move `nodemon` dependency to `server/package.json`
* Use docker-compose.override method
* Ignore `postgres-data` volume
* Use `yarn` for server Dockerfile
* Use `ecmaVersion` to 2018 for `ESLint`
* Update `yarn.lock` files
* Format seed.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+# system_files
 .DS_Store
 .idea/
 .sonarlint/
 .vscode/
+*-debug.log
+*-error.log
+
+/.nyc_output
+/dist
+/lib
+/package-lock.json
+/tmp
 
 node_modules
 
@@ -9,3 +18,4 @@ node_modules
 secrets/
 *.csv
 *.sqlite
+postgres-data/
