Switch to lerna packages

--- a/package.json
+++ b/package.json
@@ -1,87 +1,7 @@
 {
   "name": "budgeteer",
-  "description": "A personal finance analysis tool for the command line",
-  "version": "1.0.0",
-  "author": "charlesponti @charlesponti",
-  "bin": {
-    "budgeteer-cli": "./bin/run"
-  },
-  "bugs": "https://github.com/charlesponti/budgeteer-cli/issues",
-  "dependencies": {
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "@oclif/plugin-help": "^2",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "cli-table": "^0.3.1",
-    "jquery": ">3.0.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.2",
-    "numeral": "^1.5.3",
-    "tslib": "^1",
-    "winston": "^2.4.0",
-    "xlsx": "^0.13.3"
-  },
+  "private": true,
   "devDependencies": {
-    "@oclif/dev-cli": "^1",
-    "@oclif/test": "^1",
-    "@oclif/tslint": "^1",
-    "@types/chai": "^4",
-    "@types/mocha": "^5",
-    "@types/node": "^10",
-    "@types/optimist": "0.0.29",
-    "chai": "^4.1.2",
-    "eslint": "^5.3.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "faker": "^4.1.0",
-    "globby": "^8",
-    "husky": "^0.14.3",
-    "mocha": "^5.2.0",
-    "nyc": "^12",
-    "prettier": "^1.14.2",
-    "pretty-quick": "^1.6.0",
-    "supertest": "^3.1.0",
-    "ts-node": "^6",
-    "tslint": "^5",
-    "typescript": "^2.9",
-    "webpack": "^3.5.2"
-  },
-  "engines": {
-    "node": ">=8.0.0"
-  },
-  "files": [
-    "/bin",
-    "/lib",
-    "/npm-shrinkwrap.json",
-    "/oclif.manifest.json"
-  ],
-  "homepage": "https://github.com/charlesponti/budgeteer-cli",
-  "keywords": [
-    "oclif"
-  ],
-  "license": "ISC",
-  "main": "main.js",
-  "oclif": {
-    "commands": "./lib/commands",
-    "bin": "budgeteer-cli",
-    "plugins": [
-      "@oclif/plugin-help"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/charlesponti/budgeteer.git"
-  },
-  "scripts": {
-    "budget": "$(npm bin)/babel-node ./cli/main.js --budget",
-    "budget:create": "$(npm bin)/babel-node ./cli/main.js --create",
-    "db:seed": "node ./server/data/seed.js",
-    "db:setup": "npm run db:sync && npm run db:seed",
-    "db:sync": "node ./server/data/sync.js",
-    "start": "node ./server/server.js",
-    "start:dev": "$(npm bin)/nodemon ./server/server.js",
-    "test": "mocha './server/**/*.test.js'",
-    "test:watch": "npm run test -- --watch"
-  },
-  "types": "lib/index.d.ts"
+    "lerna": "^3.0.6"
+  }
 }
