--- a/packages/api/docker-compose.override.yml
+++ b/packages/api/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
       DB_HOST: db
       DB_LOGIN: postgres
       DB_PASSWORD: postgres
+      NODE_ENV: development
     ports:
       - "3000:3000"
     volumes:
@@ -24,4 +25,4 @@ services:
       - "5432:5432"
 
 volumes:
-  ? budgeteer-data
+  budgeteer-data:
