--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,10 +11,11 @@
     "graphql": "^0.11.6",
     "graphql-tools": "^2.0.0",
     "lodash": "^4.17.19",
+    "moment": "^2.29.1",
     "nodemon": "^1.18.3",
     "pg": "^7.4.3",
     "sequelize": "^5.15.1",
-    "winston": "^2.4.0"
+    "winston": "^3.3.3"
   },
   "scripts": {
     "docker:up": "docker-compose -f docker-compose.yml -f docker-compose.override.yml up --build",
@@ -37,7 +38,6 @@
     "eslint-plugin-prettier": "^2.6.2",
     "husky": "^0.14.3",
     "prettier": "^1.14.2",
-    "pretty-quick": "^1.6.0",
-    "sequelize-cli": "^6.2.0"
+    "pretty-quick": "^1.6.0"
   }
 }
