--- a/package.json
+++ b/package.json
@@ -1,7 +1,46 @@
 {
-  "name": "budgeteer",
-  "private": true,
+  "name": "@budgeteer/server",
+  "version": "0.1.0",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "chai": "^4.2.0",
+    "csvtojson": "^2.0.8",
+    "dotenv": "^8.2.0",
+    "express": "^4.13.4",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.6",
+    "graphql-tools": "^2.0.0",
+    "lodash": "^4.17.19",
+    "moment": "^2.29.1",
+    "nodemon": "^1.18.3",
+    "pg": "^7.4.3",
+    "sequelize": "^5.15.1",
+    "winston": "^3.3.3"
+  },
+  "scripts": {
+    "docker:up": "docker-compose -f docker-compose.yml -f docker-compose.override.yml up --build",
+    "docker:restart": "docker-compose down && yarn docker:up",
+    "db:seed": "node ./src/data/seed.js",
+    "db:setup": "npm run db:sync && npm run db:seed",
+    "db:sync": "node ./src/data/sync.js",
+    "prestart": "yarn db:setup",
+    "start": "node ./src/server.js",
+    "start:dev": "$(npm bin)/nodemon ./src/server.js",
+    "test": "mocha './src/**/*.test.js'",
+    "test:watch": "npm run test -- --watch",
+    "precommit": "pretty-quick --staged"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "lerna": "^3.0.6"
+    "eslint": "^5.4.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "husky": "^0.14.3",
+    "mocha": "^8.2.0",
+    "prettier": "^1.14.2",
+    "pretty-quick": "^1.6.0",
+    "supertest": "^5.0.0"
   }
 }
