(Resolves #13) Upgrade sequalize, pg, and pg-hstore (#14)
* (Resolves #13) Upgrade sequalize, pg, and pg-hstore

* Replace yarn for npm

* make it better

* (fix) Use DATABASE_URL instead of deconstructed components

* (fix) Use DATABASE_URL instead of deconstructed components

* Use jest --passWithNoTests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 version: "3.1"
 
 services:
-  web:
-    build: .
-    depends_on:
-      - db
   db:
     image: postgres:latest
+    volumes:
+      - budgeteer-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: budgeteer
+    ports:
+      - "5432:5432"
+
+volumes:
+  budgeteer-data:
