--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
     "lodash": "^4.17.19",
     "moment": "^2.29.1",
     "nodemon": "^1.18.3",
-    "pg": "^7.4.3",
-    "sequelize": "^5.15.1",
+    "pg": "^8.4.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
     "winston": "^3.3.3"
   },
   "scripts": {
-    "docker:up": "docker-compose -f docker-compose.yml -f docker-compose.override.yml up --build",
+    "docker:up": "docker-compose -f docker-compose.yml up --build",
     "docker:restart": "docker-compose down && yarn docker:up",
-    "db:seed": "node ./src/data/seed.js",
-    "db:setup": "npm run db:sync && npm run db:seed",
     "db:sync": "node ./src/data/sync.js",
-    "prestart": "yarn db:setup",
+    "prestart": "npm run db:sync",
     "start": "node ./src/server.js",
     "start:dev": "$(npm bin)/nodemon ./src/server.js",
-    "test": "mocha './src/**/*.test.js'",
+    "test": "jest --passWithNoTests",
     "test:watch": "npm run test -- --watch",
     "precommit": "pretty-quick --staged"
   },
@@ -38,9 +37,16 @@
     "eslint": "^5.4.0",
     "eslint-plugin-prettier": "^2.6.2",
     "husky": "^0.14.3",
+    "jest": "^26.6.1",
     "mocha": "^8.2.0",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "supertest": "^5.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
