--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.8",
     "dotenv": "^8.2.0",
     "express": "^4.13.4",
