--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@budgeteer/server",
+  "name": "@hominem/api",
   "version": "0.1.0",
   "description": "",
   "main": "build/src/server.js",
